Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117429

TIFF AnimatedImage memory leak

XMLWordPrintable

    • macOS, Windows
    • 7c313f186 (dev), 7fa10ab76 (6.7), 0f541bbc1 (6.6), e11e9ff34 (tqtc/lts-6.5), 3f515fa7a (dev), dc314851e (6.7), 1fb0a119a (6.6), 5b171e557 (tqtc/lts-6.5)

      If you load a TIFF image using an `AnimatedImage` Item in qml then the application memory will continue to grow until an out of memory crash occurs. The same issue does not seem to happen if using an `Image`.

      To replicate just create a default quick project and load a TIFF image from disk, you should see the issue:

      import QtQuick
      import QtQuick.Window
      
      Window {
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World")
      
          AnimatedImage {
              anchors.fill: parent
              source: "file:///C:/Users/<username>/Desktop/streaming/test_images/CCITT_1.TIF"
          }
      }
      

      Attached a zip of two test TIFF images that reproduced the problem for me. The larger the image the faster the memory leak grows.

        1. test_images.zip
          96 kB
          Ollie Dawes
        2. tiff-memory-issue.gif
          570 kB
          Ollie Dawes
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            haiku Ollie Dawes
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: